#添加了路由表，在introduction里给出了范例
1、路由表增加了五个部分的路由，可以在右边选取
2、introduction给出了标题加介绍加灯箱的范例，可以参照

--- a/src/components/SidebarScroll/SidebarScroll.css
+++ b/src/components/SidebarScroll/SidebarScroll.css
@@ -43,9 +43,9 @@
     /*}*/
 
     body,
-    /*.panel {*/
-        /*background-color: #fff;*/
-    /*}*/
+    .panel {
+        background-color: #fff;
+    }
 
     .menu {
         background-color: #1D1F20;
@@ -104,7 +104,6 @@
     }
 
     .panel {
-        text-align: center;
         padding-top: 0px;
         min-height: 100%;
     }
