--- a/views/index.pug
+++ b/views/index.pug
@@ -2,5 +2,7 @@ doctype html
 html(lang="en")
     head
     title #{htmlWebpackPlugin.options.title}
+    link(rel="bookmark" href="../src/assets/meow.ico")
+    link(rel="shortcut icon" href="../src/assets/meow.ico")
     body
         #app
