--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,9 @@ doctype html
 html(lang="en")
     head
     title #{htmlWebpackPlugin.options.title}
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible" content="IE=edge")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel="bookmark" href="../src/assets/meow.ico")
     link(rel="shortcut icon" href="../src/assets/meow.ico")
     body
